welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:46: error: type mismatch;
 found   : Unit
 required: Boolean
      droite()
            ^SnakeBuggle:50: error: Boolean does not take parameters
  }else(getDirection()==Direction.OUEST){
                                        ^SnakeBuggle:39: error: type mismatch;
 found   : Unit
 required: Boolean
	if ( estFaceMur()==true){
        ^